force-app/main/default/objects/Benefit_Product__c/Benefit_Product__c.object-meta.xml
<CustomObject>
    <description>Relación entre Beneficios (Actividades) y productos asociados</description>
    <label>Producto de actividad CINA</label>
    <nameField>
        <label>Benefit Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productos de actividades CINA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>