force-app/main/default/objects/Benefit_Product__c/fields/Benefit__c.field-meta.xml
<CustomField>
    <fullName>Benefit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit</label>
    <referenceTo>Benefit</referenceTo>
    <relationshipName>Productos</relationshipName>
    <type>Lookup</type>
</CustomField>