force-app/main/default/objects/Benefit_Product__c/fields/Familia_Producto__c.field-meta.xml
<CustomField>
    <fullName>Familia_Producto__c</fullName>
    <formula>text( Product3Id__r.Family )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Familia Producto</label>
    <type>Text</type>
</CustomField>