force-app/main/default/objects/Benefit_Product__c/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipName>Benefit_Products</relationshipName>
    <type>Lookup</type>
</CustomField>