force-app/main/default/objects/Benefit_Product__c/fields/Product3Id__c.field-meta.xml
<CustomField>
    <fullName>Product3Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Productos de actividades CINA</relationshipLabel>
    <relationshipName>Benefit</relationshipName>
    <type>Lookup</type>
</CustomField>